<resources>
    <string name="app_name">Guardian</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="instance">demo-report-card</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_guardian_of">Welcome Guardian of &#160;</string>
    <string name="checkchild">Checkout what your child is up to.</string>
    <string name="checkchildren">Checkout what your children are up to.</string>
    <string name="name">Name :</string>
    <string name="grade">Grade :</string>
    <string name="school">School :</string>
    <string name="boldSub">*Subject*</string>
    <string name="boldDate">*Date*</string>
    <string name="rollno">Rollno :</string>
    <string name="parent_teacher_forum">Parent Teacher Forum</string>
    <string name="monthyear">Month-Year</string>
    <string name="attendance">Attendance</string>
    <string name="enter_msg">Enter message</string>
    <string name="total_marks">Total Marks:</string>
    <string name="avg_marks">Average Grade :</string>
    <string name="sub">Subject</string>
    <string name="faculty">Faculty</string>
    <string name="chp">Chapters</string>
    <string name="note">Note</string>
    <string name="time_table">Exam Timetable</string>
    <string name="syllabus">Syllabus</string>
    <string name="acad_cal">Academic Calender</string>
    <string name="prog_report">Progress Report</string>
    <string name="text_select_language">Select Language</string>
    <string name="text_translate_cancel">Cancel</string>
    <string name="action_change_language">Change Language</string>
    <string name="pleaseclick">Please click Back again to exit</string>
    <string name="today">Today</string>
    <string name="total_att">Total attendance is</string>
    <string name="att_of">Attendance of</string>
    <string name="ad_mob_id" translatable="false">ca-app-pub-1019525559302935~6343195383</string>
    <string name="ad_unit_id" translatable="false">ca-app-pub-1019525559302935/8226767478</string>
    <string name="website_lilmtn" translatable="false">https://www.lilliemountain.com/</string>
    <string name="website_url" translatable="false">https://report-card-59210.firebaseapp.com/login</string>
    <string name="menu_translate">Translate</string>
    <string name="menu_faq" translatable="false">FAQ</string>
    <string name="sign_out">Sign Out</string>
    <string name="about_developer">About Developer</string>
    <string name="action_how">Help</string>
</resources>
