<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_developer"
        android:orderInCategory="10"
        android:title="@string/about_developer"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/action_translate"
        android:icon="@drawable/ic_translate"
        android:orderInCategory="200"
        android:title="@string/menu_translate"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/action_faq"
        android:orderInCategory="300"
        android:title="@string/menu_faq"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/action_signOut"
        android:orderInCategory="400"
        android:title="@string/sign_out"
        app:showAsAction="withText"/>
</menu>